# miscellaneous-rust-code-alongs

./: .gitignore
anatomy-of-a-terminal-emulator/: Cargo.toml  README.md
anatomy-of-a-terminal-emulator/src/: main.rs
async_rust_code_along/: README.md
async_rust_code_along/ex0103_async_await_primer/: Cargo.toml
building-web-apis-with-rust/rocket-app-beginners/: Cargo.toml  README.md  Rocket.toml  diesel.toml
building-web-apis-with-rust/rocket-app-beginners/migrations/2024-06-01-092610_create_rustaceans/: up.sql
building-web-apis-with-rust/rocket-app-beginners/src/: auth.rs  main.rs  models.rs  repositories.rs
building_http_server_from_scratch/: Cargo.toml  README.md
building_http_server_from_scratch/public/: hello.html  index.html
building_http_server_from_scratch/src/: main.rs  server.rs  website_handler.rs
building_local_blockchain/: Cargo.toml  README.md
building_local_blockchain/src/: blockchain.rs  main.rs
chat_server_with_rust_and_tokio/async_client_server/: Cargo.toml
chat_server_with_rust_and_tokio/chat_server_manning/: Cargo.toml
coding_basic_blockchain_structure/: Cargo.toml  README.md
coding_basic_blockchain_structure/src/: main.rs
mars_weight_calculator/: Cargo.toml  README.md
mars_weight_calculator/src/: main.rs
rusty-wasm/: Cargo.toml  README.md  index.html
rusty-wasm/site/: index.js  package.json
simple_tcp_listener/: Cargo.toml
simple_tcp_listener/src/: http.rs  main.rs  request.rs  response.rs  server.rs
simple_tcp_listener/src/middleware/: logger.rs  middleware.rs
tokio-tutorial/: README.md
(+17 files in other folders)
