[package]
name = "simple_tcp_listener"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.20.0"
tokio = { version = "1.28.0", features = ["full"] }
httparse = "1.8.0"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"