[package]
name = "rocket-app-beginners"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.203"
serde_json = "1.0.117"
base64 = "0.20"
diesel = { version = "2.2.0", features = ["sqlite", "r2d2"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }